--- a/package.json
+++ b/package.json
@@ -11,8 +11,24 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/tailwindcss": "latest",
     "nuxt": "^3.8.1",
+    "nuxt-headlessui": "latest",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@heroicons/vue": "^2.0.18",
+    "@prisma/client": "^5.6.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
+    "formidable": "^3.5.1",
+    "human-time": "^0.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "mitt": "^3.0.1",
+    "prisma": "^5.6.0",
+    "url-pattern": "^1.0.3"
   }
 }
